--- a/tests/testdata/htdocs/index_files/css.css
+++ b/tests/testdata/htdocs/index_files/css.css
@@ -8,18 +8,7 @@
     height: 600px;
     overflow: auto;
 }
-.canvas iframe{
-    width: 100%;
-    height: 10000px;
-    border: none;
-}
-.canvas #panels{
-    position: absolute;
-    top: 0px; left: 0px;
-    width: 100%;
-    height: 0px;
-}
-#palette{
+.palette{
     display:block;
     position:relative;
     float: right;
