--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -16,7 +16,7 @@
 		border: none;
 	}
 
-	.broccoli--panel{
+	.broccoli--panels{
 		position: absolute;
 		top: 0; left:0;
 		width: 100%;
@@ -49,6 +49,23 @@
 		border: 1px dotted #ffcc33;
 		background-color: rgba(255,255,204, 0.4);
 		opacity: 1 !important;
+	}
+}
+
+// edit window
+.broccoli--edit-window{
+	position: fixed;
+	top: 0; left: 0;
+	overflow: auto;
+	background-color: rgba(100, 100, 100, 0.5);
+	width: 100%;
+	height: 100%;
+	z-index: 10000;
+	&-inner{
+		width: 90%;
+		background-color:#fff;
+		padding: 20px;
+		margin: 100px auto;
 	}
 }
 
