--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -39,6 +39,11 @@
 		border-style: dotted !important;
 		border-color: #6cf;
 		background-color: rgba(231,244,255, 0.5);
+
+		&[data-broccoli-sub-mod-name]{
+			border-color: #3c3;
+			background-color: rgba(232,255,231, 0.5);
+		}
 	}
 	&__selected{
 		border-color: #f33 !important;
@@ -50,6 +55,16 @@
 		border: 1px dotted #ffcc33;
 		background-color: rgba(255,255,204, 0.4);
 		opacity: 1 !important;
+	}
+	&__drag-entered{
+		border-style: dashed !important;
+		border-color: #6cf;
+		background-color: rgba(231,244,255, 0.5);
+
+		&[data-broccoli-sub-mod-name]{
+			border-color: #3c3;
+			background-color: rgba(232,255,231, 0.5);
+		}
 	}
 }
 
