ビルトインアンカーフィールド、ビルトインDECフィールド を追加

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -74,6 +74,12 @@
 		margin: 0.5em 0 1em 0;
 	}
 }
+.broccoli--edit-window-builtin-fields{
+	border: 1px solid #99e;
+	padding: 1em;
+	margin: 1em 5%;
+	background: #eef;
+}
 
 // lightbox
 .broccoli--lightbox{
