--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -35,10 +35,26 @@
 	background-color: transparent;
 	z-index: 0;
 
+	&-module-name{
+		display:none;
+	}
+
 	&:hover{
 		border-style: dotted !important;
 		border-color: #6cf;
 		background-color: rgba(231,244,255, 0.5);
+
+		.broccoli--panel-module-name{
+			display:block;
+			position: absolute;
+			left: -5px; top: -5px;
+			border: 1px solid #000;
+			background: #fff;
+			color: #000;
+			padding: 2px 10px;
+			font-size: 8px;
+			font-weight: normal;
+		}
 
 		&[data-broccoli-sub-mod-name]{
 			border-color: #3c3;
