ドラッグ＆ドロップ操作時の追加・移動先を示すガイド機能を追加

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -143,6 +143,40 @@
 			border-color: #3c3;
 			background-color: rgba(232,255,231, 0.5);
 		}
+		.broccoli--panel-drop-to-insert-here{
+			display:block;
+		}
+	}
+
+	&-drop-to-insert-here{
+		display:none;
+		border:none;
+		background-color:#f93;
+		position: absolute;
+		left:5%; top:-8px;
+		width:90%;
+		margin:0 auto;
+		height:1px;
+		&:before,
+		&:after{
+			content:' ';
+			width:0;
+			height:0;
+			display: inline-block;
+			border-width:7px 0 7px 13px;
+			border-style:solid;
+			border-color:#f93;
+			border-top-color:transparent;
+			border-bottom-color:transparent;
+			position:absolute;
+			left:-5%; top:-7px;
+		}
+		&:after{
+			border-left-width:0;
+			border-right-width:13px;
+			right:-5%;
+			left:auto;
+		}
 	}
 }
 
