module-palette で bootstrap の tooltip は表示されなかった。
- コンテナが overflow:auto; だと、leftがマイナス座標に行ってしまい表示されない。
- 旧GUI編集機能では表示されていたのだが・・・？ なぜ？
- パレットのパッケージ名、カテゴリ名の色を旧GUI編集機能に合わせた。

--- a/tests/testdata/htdocs/index_files/css.css
+++ b/tests/testdata/htdocs/index_files/css.css
@@ -15,6 +15,7 @@
 	width: 50%;
 	height: 600px;
 	overflow: auto;
+	z-index: 90;
 }
 .palette{
 	display:block;
@@ -23,6 +24,7 @@
 	width: 20%;
 	height: 600px;
 	overflow: auto;
+	z-index: 100;
 }
 .instancePathView{
 	display:block;
