--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -291,6 +291,7 @@
 
 // Module Palette
 .broccoli--module-palette{
+
 	ul{
 		margin: 0;
 		padding: 0;
@@ -300,21 +301,34 @@
 			padding:0 0 10px 0;
 			a{
 				display: block;
-				color: #fff;
-				background-color: #999;
+				color: #eee;
+				background-color: #333;
 				padding:0.3em 1em;
 				white-space: nowrap;
 				overflow: hidden;
 				text-overflow: ellipsis;
 				font-weight: bold;
+				font-size: 12px;
+				&:active,
+				&:focus,
+				&:hover{
+					color: #fff;
+				}
 			}
 			ul{
 				li{
 					a{
 						color: #000;
-						background-color: #f5f5f5;
+						background-color: #666;
+						color: #eee;
 						padding:0.3em 2em;
 						font-weight: normal;
+						font-size: 11px;
+						&:active,
+						&:focus,
+						&:hover{
+							color: #fff;
+						}
 					}
 					ul{
 						li{
@@ -335,7 +349,7 @@
 		padding: 0;
 		margin: 0;
 		background-color: #eee;
-		font-size: small;
+		font-size: 11px;
 		line-height: 1;
 		vertical-align: middle;
 		overflow: hidden;
