--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -106,23 +106,53 @@
 		list-style:none;
 		display: table;
 		width: 100%;
+		font-size: small;
 	}
 	&-fields{
 		border:1px dotted #ddd;
 		background-color: #f5f5f5;
 	}
+	&-bowlname{
+		font-weight: bold;
+	}
+	&-modulename{
+		font-weight: bold;
+	}
+	&-fieldname{
+		font-weight: normal;
+		font-size: 85%;
+	}
+
 	[data-broccoli-instance-path]{
 		display: table;
 		width: 100%;
 		border:2px solid #666;
 		border-bottom-width: 0px;
-		background-color:#f9f9f9;
+		background-color: #f9f9f9;
 		padding: 1px 1px 1px 5px;
 		margin: 0;
 		position: relative;
 		left:0; top:0;
 
-		&:first-child{
+		&.broccoli--panel__hovered{
+			border-style: dotted !important;
+			border-color: #6cf;
+			background-color: rgba(231,244,255, 0.5);
+			&[data-broccoli-sub-mod-name]{
+				border-color: #3c3;
+				background-color: rgba(232,255,231, 0.5);
+			}
+			>.broccoli--instance-tree-view-fields{
+				// border:1px dotted #eee !important;
+				background-color: #f9f9f9 !important;
+			}
+		}
+		&.broccoli--panel__selected{
+			background-color: #fff2f2;
+			border-color: #f33;
+		}
+
+		&:nth-child(2){
 			border-radius: 5px 5px 0 0;
 			border-bottom-width: 0px;
 		}
