canvasモードのビルド式で、isSingleRootElement の判断ロジックを改善

--- a/tests/testdata/htdocs/common/css/module.css
+++ b/tests/testdata/htdocs/common/css/module.css
@@ -29,6 +29,14 @@
 
 
 /**
+ * module: testMod1:dev/singleRootElement
+ */
+.single-root-element--element {
+  float: left;
+  width: 24%; }
+
+
+/**
  * module: testMod1:dev/twig
  */
 .twig_template {
