--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -334,7 +334,7 @@
 	bottom: 10%;
 	width: 50%;
 	z-index: 10000;
-	overflow: auto;
+	overflow: hidden;
 	background-color: rgba(100%, 100%, 100%, 0.9);
 	padding: 20px;
 	border: 5px solid #999;
