field.mkPreviewHtml() を Client Side のメソッドに変更。
- パフォーマンス向上を図る。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -212,8 +212,9 @@
 
 		.broccoli--instance-tree-view-fieldpreview{
 			display: block;
+			height: auto;
 			padding: 2px 5px;
-			overflow: auto;
+			overflow: hidden;
 			max-height: 100px;
 			line-height: 1;
 
@@ -222,6 +223,7 @@
 				padding: 0;
 				font-size: 9px;
 				line-height: 1;
+				list-style-type: none;
 				font-weight: normal;
 				display: inline;
 				color: #999;
