--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -360,14 +360,26 @@
 // status view
 .broccoli--module-info-preview{
 	position: fixed;
-	top: 10%; left: 25%;
-	bottom: 10%;
-	width: 50%;
+	// top: 10%; left: 36%;
+	// bottom: 10%;
+	width: 280px;
+	height: 320px;
 	z-index: 10000;
 	overflow: hidden;
 	background-color: rgba(100%, 100%, 100%, 0.9);
 	padding: 20px;
 	border: 5px solid #999;
+	font-size:11px;
+	box-sizing: border-box;
+	word-wrap: break-word;
+	word-break: break-all;
+
+	.broccoli--module-info-content{
+		h1{ font-size:14px; font-weight: bold; }
+		h2{ font-size:12px; font-weight: bold; }
+		h3,h4,h5,h6{ font-size:11px; font-weight: bold; }
+		h1:first-of-type{ margin:0; }
+	}
 }
 .broccoli--module-info-content{
 	&-thumb{
