--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -339,6 +339,12 @@
 	margin: 1em 5%;
 	background: #eef;
 }
+.broccoli--edit-window-builtin-fields-switch:before{
+	content:"─ ";
+}
+.broccoli--edit-window-builtin-fields-switch__on:before{
+	content:"▼ ";
+}
 
 // lightbox
 .broccoli--lightbox{
