--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -47,11 +47,15 @@
 	// position: fixed;
 	// bottom: 0; left:0;
 	// z-index: 10;
-	width: 100%;
-	padding: 3px 10px;
-	border-top: 1px solid #000;
-	background: #f7f7f7;
+
 	font-size: 11px;
+
+	&-inner{
+		width: 100%;
+		padding: 3px 10px;
+		border-top: 1px solid #000;
+		background: #f7f7f7;
+	}
 
 	>ul{
 		display: block;
