--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -446,14 +446,17 @@
 		padding: 0;
 		font-size: small;
 		overflow: auto;
-		li{
+
+		li{ // <- package
 			list-style-type: none;
-			padding:0 0 10px 0;
+			padding: 0;
+
 			a{
 				display: block;
 				color: #eee;
+				border-top: 1px solid #666;
 				background-color: #333;
-				padding:0.3em 1em;
+				padding: 0.3em 1em;
 				white-space: nowrap;
 				overflow: hidden;
 				text-overflow: ellipsis;
@@ -469,9 +472,10 @@
 				margin: 0;
 				padding: 0;
 				font-size: small;
-				li{
+				li{ // <- category
 					a{
 						color: #000;
+						border-top: 1px solid #999;
 						background-color: #666;
 						color: #eee;
 						padding:0.3em 2em;
@@ -487,7 +491,7 @@
 						margin: 0;
 						padding: 0;
 						font-size: small;
-						li{
+						li{ // <- modoule
 							padding: 0;
 						}
 					}
@@ -498,7 +502,7 @@
 	button{
 		box-sizing: border-box;
 		display: block;
-		width: 99%;
+		width: 100%;
 		height: 50px;
 		border: 1px solid #999;
 		text-align:left;
