--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -122,12 +122,15 @@
 		width: 100%;
 		font-size: small;
 	}
+
 	&-fields{
 		border:1px dotted #ddd;
 		background-color: #f5f5f5;
 	}
 	&-bowlname{
 		font-weight: bold;
+		margin: 1em 0 0.5em 0;
+		display: block;
 	}
 	&-modulename{
 		font-weight: bold;
