--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -406,6 +406,10 @@
 	word-break: break-all;
 
 	.broccoli--module-info-content{
+		font-size: 11px;
+		*{
+			font-size: inherit;
+		}
 		h1{ font-size:14px; font-weight: bold; }
 		h2{ font-size:12px; font-weight: bold; }
 		h3,h4,h5,h6{ font-size:11px; font-weight: bold; }
