--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -397,6 +397,38 @@
 	}
 }
 
+// progress
+.broccoli--progress{
+	position: fixed;
+	top: 0; left: 0;
+	overflow: hidden;
+	background-color: rgba(128, 128, 128, 0.05);
+	width: 100%;
+	height: 100%;
+	z-index: 11000;
+	&-inner{
+		position: absolute;
+		left: 50%; top: 50%;
+		width: 180px;
+		height: 1px;
+	}
+	&-image{
+		position: absolute;
+		left: -50%; top: -50%;
+		width: 100%;
+		height: 100%;
+		background-color:#000;
+
+		animation: broccoli--progress 1.4s infinite normal ease;
+		@keyframes broccoli--progress {
+			0% { transform: rotate(0deg) scale(0,0); }
+			30% { transform: rotate(270deg) scale(1,1); }
+			100% { transform: rotate(720deg) scale(0,0); }
+		}
+	}
+}
+
+
 // status view
 .broccoli--module-info-preview{
 	position: fixed;
