--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -367,6 +367,7 @@
 	background: #fafafa;
 	padding: 0;
 	li{
+		position: relative;
 		border-bottom: 1px solid #bbb;
 		list-style-type: none;
 		margin: 0;
