editWindow 上で、moduleフィールドとloopフィールドの並べ替えができるようにする機能の更新
現時点での暫定実装では、並べ替え処理後、editWindow(=編集ポップアップ画面)ごとリロードする仕組みになってるが、
これを、変更箇所のみの更新で済むように作りかえた。

TODO: ドロップ処理の終了を待ってから実行するべきところを、暫定的にタイマーで逃げている。
editWindow.js Line:197

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -360,23 +360,27 @@
 // 	content:"▼ ";
 // }
 .broccoli--edit-window-module-fields{
-	max-height: 200px;
+	padding: 10px;
 	overflow: auto;
-	border: 2px solid #bbb;
+	max-height: 200px;
+	border: 1px solid #bbb;
 	border-radius: 5px;
 	background: #fafafa;
-	padding: 0;
-	li{
-		position: relative;
-		border-bottom: 1px solid #bbb;
-		list-style-type: none;
-		margin: 0;
-		padding: 10px;
-		&:hover{
-			background: #eee;
-		}
-		&:last-child{
-			border-bottom: none;
+
+	ul{
+		padding: 0;
+		li{
+			position: relative;
+			border-bottom: 1px solid #bbb;
+			list-style-type: none;
+			margin: 0;
+			padding: 10px;
+			&:hover{
+				background: #eee;
+			}
+			&:last-child{
+				border-bottom: none;
+			}
 		}
 	}
 }
