--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -22,6 +22,21 @@
 		-ms-user-select: auto; // IE10かららしい
 	}
 }
+
+// mixin: appender
+@mixin broccoli--appender(){
+	padding:9px;
+	background-color: #eef;
+	border-color: #8585d2;
+	font-family: "YuGothic", "Yu Gothic", Meiryo, "Hiragino Kaku Gothic ProN", Verdana, sans-serif;
+	font-size: 11px;
+	color:#000;
+	text-align:center;
+	box-sizing:border-box;
+	clear:both;
+	white-space:nowrap;
+}
+
 // Canvas
 .broccoli--canvas{
 	display: block;
@@ -188,13 +203,8 @@
 
 		&[data-broccoli-is-appender]{
 			// moduleフィールド の appender
-			padding:9px;
-			background-color: #eef;
-			border-color: #8585d2;
-			font-family: "YuGothic", "Yu Gothic", Meiryo, "Hiragino Kaku Gothic ProN", Verdana, sans-serif;
+			@include broccoli--appender();
 			font-size: 11px;
-			color:#000;
-			text-align:center;
 			box-sizing:border-box;
 			clear:both;
 			white-space:nowrap;
@@ -383,6 +393,30 @@
 			}
 		}
 	}
+
+	[data-broccoli-is-appender]{
+		// moduleフィールド の appender
+		@include broccoli--appender();
+		font-size: 11px;
+		box-sizing:border-box;
+		clear:both;
+		white-space:nowrap;
+
+		&[data-broccoli-sub-mod-name]{
+			// loopフィールド の appender
+			padding:5px 15px;
+			background-color:#dfe;
+			border-color:#6dcd9d;
+			font-family: "YuGothic", "Yu Gothic", Meiryo, "Hiragino Kaku Gothic ProN", Verdana, sans-serif;
+			font-size:9px;
+			text-align:center;
+			box-sizing:border-box;
+			clear:both;
+			white-space:nowrap;
+
+		}
+	}
+
 }
 
 // lightbox
