モジュール設定 `deprecated` を追加。非推奨のモジュールに `true` をセットすると、モジュールパレットに表示されなくなる。

--- a/tests/testdata/htdocs/common/css/module.css
+++ b/tests/testdata/htdocs/common/css/module.css
@@ -6,6 +6,15 @@
 
 
 /**
+ * module: testMod1:dev/deprecated
+ */
+.deprecated {
+  background-color: #eee;
+  color: #666;
+  padding: 0.5em; }
+
+
+/**
  * module: testMod1:dev/float_loop
  */
 .dev-float-loop:before, .dev-float-loop:after {
