--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -354,7 +354,11 @@
 // edit window
 .broccoli--edit-window{
 	&-fields{
-		margin: 0.5em 0 1em 0;
+		margin: 0.5em 0 3em 0;
+	}
+	h3{
+		padding: 0.5em 0;
+		background-color: #fff;
 	}
 }
 .broccoli--edit-window-builtin-fields{
