--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -42,6 +42,7 @@
 	display: block;
 	position: relative;
 	top: 0; left: 0;
+	overflow: auto;
 
 	iframe{
 		position: absolute;
@@ -130,6 +131,8 @@
 
 // Instance Tree View
 .broccoli--instance-tree-view{
+	overflow: auto;
+
 	ul{
 		margin:0; padding:0 0 0 5px;
 		display: table;
@@ -367,12 +370,7 @@
 	margin: 1em 5%;
 	background: #eef;
 }
-// .broccoli--edit-window-builtin-fields-switch:before{
-// 	content:"─ ";
-// }
-// .broccoli--edit-window-builtin-fields-switch__on:before{
-// 	content:"▼ ";
-// }
+
 .broccoli--edit-window-module-fields{
 	padding: 10px;
 	overflow: auto;
@@ -493,6 +491,7 @@
 	}
 }
 .broccoli--module-info-content{
+
 	&-thumb{
 		width:200px;
 		max-width:20%;
@@ -529,6 +528,7 @@
 
 // Module Palette
 .broccoli--module-palette{
+	overflow: auto;
 
 	div.broccoli--module-palette-inner{
 		overflow: hidden;
