copy, paste イベントで インスタンスの copy, paste を発火するようになった。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -7,19 +7,19 @@
 	-ms-user-select: none; // IE10かららしい
 	cursor: default;
 
-	[draggable=true]{
-		cursor: move;
-	}
-	[draggable=false]{
-		cursor: default;
-	}
-
 	// 選択可能領域
 	&__user-selectable{
 		user-select: auto; // CSS3
 		-moz-user-select: auto; // Firefox
 		-webkit-user-select: auto; // Safari、Chromeなど
 		-ms-user-select: auto; // IE10かららしい
+	}
+
+	[draggable=true]{
+		cursor: move;
+	}
+	[draggable=false]{
+		cursor: default;
 	}
 }
 
@@ -270,6 +270,19 @@
 	z-index: 0;
 	cursor: move;
 
+	user-select: auto; // CSS3
+	-moz-user-select: auto; // Firefox
+	-webkit-user-select: auto; // Safari、Chromeなど
+	-ms-user-select: auto; // IE10かららしい
+	pointer-events: auto;
+	> *{
+		user-select: none; // CSS3
+		-moz-user-select: none; // Firefox
+		-webkit-user-select: none; // Safari、Chromeなど
+		-ms-user-select: none; // IE10かららしい
+		pointer-events: none;
+	}
+
 	&-module-name{
 		display:none;
 	}
@@ -295,6 +308,20 @@
 			border-color: #3c3;
 			background-color: rgba(232,255,231, 0.5);
 		}
+	}
+}
+.broccoli--instance-tree-view-panel-item{
+	user-select: auto; // CSS3
+	-moz-user-select: auto; // Firefox
+	-webkit-user-select: auto; // Safari、Chromeなど
+	-ms-user-select: auto; // IE10かららしい
+	pointer-events: auto;
+	> *{
+		user-select: none; // CSS3
+		-moz-user-select: none; // Firefox
+		-webkit-user-select: none; // Safari、Chromeなど
+		-ms-user-select: none; // IE10かららしい
+		pointer-events: none;
 	}
 }
 .broccoli--panel-drop-to-insert-here{
