--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -481,6 +481,7 @@
 
 }
 
+
 // lightbox
 .broccoli--lightbox{
 	position: fixed;
@@ -519,6 +520,14 @@
 		width: 100%;
 		height: 180px;
 	}
+}
+.broccoli--progress-comment{
+	color: #999;
+	font-size: 70%;
+	text-align: center;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 
