(ifモジュール仕様検討のためのサンプルコードを追加)

--- a/tests/testdata/htdocs/common/css/module.css
+++ b/tests/testdata/htdocs/common/css/module.css
@@ -41,8 +41,11 @@
   border: 1px solid #0ff;
   padding: 20px;
   margin: 1em 10%; }
-  .if--additional-elements {
+  .if__additional-elements {
     border: 1px solid #000;
+    padding: 20px; }
+  .if__base-text {
+    border: 1px solid #00f;
     padding: 20px; }
 
 /**
