--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -782,7 +782,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 300px;
+	max-width: 300px;
 	min-height: 30px;
 	background-color: #f9f9f9;
 	border: 1px solid #999;
