--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -787,6 +787,8 @@
 	background-color: #f9f9f9;
 	border: 1px solid #999;
 
+	font-size: 14px;
+
 	ul{
 		padding: 0; margin: 0;
 		li{
@@ -794,8 +796,7 @@
 			list-style-type: none;
 			a, span{
 				display: block;
-				font-size: 1rem;
-				padding: 0.3rem 1rem;
+				padding: 4px 18px;
 			}
 			a:hover{
 				background-color: #f0f0f0;
