--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -47,6 +47,8 @@
 	position: relative;
 	top: 0; left: 0;
 	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
 
 	iframe{
 		position: absolute;
@@ -136,6 +138,8 @@
 // Instance Tree View
 .broccoli--instance-tree-view{
 	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
 
 	ul{
 		margin:0; padding:0 0 0 5px;
@@ -422,6 +426,8 @@
 	&-module-fields{
 		padding: 10px;
 		overflow: auto;
+		-webkit-overflow-scrolling: touch;
+		overflow-scrolling: touch;
 		height: 320px;
 		border: 1px solid #bbb;
 		border-radius: 5px;
@@ -431,6 +437,8 @@
 		&__instances{
 			width: 100%;
 			overflow: auto;
+			-webkit-overflow-scrolling: touch;
+			overflow-scrolling: touch;
 			.broccoli--edit-window-module-fields--fieldtype-module &{
 				padding-right: 5px;
 				margin-right: 5px;
@@ -492,6 +500,8 @@
 			.broccoli--edit-window-module-fields--fieldtype-module &{
 				width: 30%;
 				overflow: auto;
+				-webkit-overflow-scrolling: touch;
+				overflow-scrolling: touch;
 				display: block;
 			}
 		}
@@ -529,6 +539,8 @@
 	position: fixed;
 	top: 0; left: 0;
 	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
 	background-color: rgba(0, 0, 0, 0.5);
 	width: 100%;
 	height: 100%;
@@ -647,6 +659,8 @@
 // Module Palette
 .broccoli--module-palette{
 	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	overflow-scrolling: touch;
 
 	div.broccoli--module-palette-inner{
 		overflow: hidden;
@@ -664,6 +678,8 @@
 		padding: 0;
 		font-size: small;
 		overflow: auto;
+		-webkit-overflow-scrolling: touch;
+		overflow-scrolling: touch;
 
 		li{ // <- package
 			list-style-type: none;
